[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbdie_ml"
authors = [{ name = "trOOnies", email = "example@github.com" }]
description = "DBD Info Extraction ML Package"
readme = "README.md"
requires-python = ">=3.10.12"
keywords = ["dbd", "ml", "pytorch"]
license = { text = "GNU-3" }
classifiers = ["Framework :: Pytorch", "Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
# optional-dependencies.dev = { file = ["requirements-dev.txt"] }
# optional-dependencies.test = { file = ["requirements-test.txt"] }


[tool.pytest.ini_options]
minversion = "6.0"

[tool.coverage.run]
omit = ["dbdie_ml/constants.py", "dbdie_ml/options/*.py"]

[project.scripts]
my-script = "dbdie_ml.module:function"
